project/contact/rust/contact-list/src/snapshots/contact_list__tests__test_grouped_contacts_0.snap
---
source: project/contact/rust/contact-list/src/tests.rs
assertion_line: 250
expression: display_group(result)
---
0 keys:
