project/contact/rust/contact-list/src/snapshots/contact_list__tests__test_grouped_contacts_2.snap
---
source: project/contact/rust/contact-list/src/tests.rs
assertion_line: 250
expression: display_group(result)
---
1 keys:

B (2 items)
Contact B (#52CD96): Barbara Fox (0 addresses)
Contact B (#A1439F): Barbara Lox (0 addresses)
